client/src/pages/Player.module.css
.artistInfo {
  display: none;
}

.artistInfo.open {
  display: block;
}

.bottomButtons {
  position: fixed;
  bottom: 20px;
  left: 50%;
  transform: translateX(-50%);
}

.bottomButtons button {
  background-color: rgb(111, 64, 150);
  border-radius: 25px;
  width: 100px;
  height: 47px;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

button.clicked {
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) inset;
}

